# humanoid_agent_world_simulation

./: .gitignore  README.md  README.zh-CN.md  api_server.py  index.html  pyproject.toml  start.sh
artifacts/: api_live_eval_only_seed11_tiny.json  api_live_full_vs_frozen_eval_only_small.json  api_live_full_vs_frozen_round4_seed19.json  api_live_full_vs_frozen_round4_train20_seed2.json  api_live_full_vs_frozen_round4_train20_seed3_combined.json  api_live_full_vs_frozen_round5_train20_seed2.json  api_live_full_vs_frozen_round6_train20_seed2.json  api_live_full_vs_frozen_round7_bandit_train20_seed2.json  api_live_full_vs_frozen_small.json  api_live_full_vs_frozen_small_round1.json  api_live_full_vs_frozen_small_round2.json  api_live_full_vs_frozen_small_round3.json  api_live_unbiased_hard_matrix.json  api_live_unbiased_hard_matrix_v2.json  api_live_unbiased_quick_matrix.json  benchmark_comparison.json  benchmark_summary.json  candidate_trial_report.json  character_identity_blind_test.json  character_identity_blind_test_baseline_20260322.json  character_identity_blind_test_pass1_20260322.json  character_identity_blind_test_pass2_fixed_20260322.json  codex_routing_divergence_quick_probe_dataset.json  demo_report.json  detailed_validation_report.json  econ_cascade_validation.json  financial_crisis_2008_sim.json  financial_crisis_2008_v2.json  hard_slice_validation_report.json  hard_slice_validation_report_latest.json  heatwave_harbor_20d_report.md  heatwave_harbor_50d_pass1_20260322.md  heatwave_harbor_50d_pass2_fixed_20260322.md  heatwave_harbor_50d_report.md  (+33 more)
(+430 files in other folders)
